{
    "name": "MyInputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "527851d7-5849-4838-874e-d0d8fa4a8b49",
            "actions": [
                {
                    "name": "PrimaryInput",
                    "type": "PassThrough",
                    "id": "d82b0906-c82b-4923-aeb7-510a9b3ff43c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "69ebdcb5-4a9b-4f8c-9e69-02140879a3f5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryPosition",
                    "type": "Value",
                    "id": "921ac0f4-fc6b-4d04-9693-959f65d46d21",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eeb934b6-1659-4ac8-933d-b686e6d77a14",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4be2adaf-77b1-456d-8f39-cfb609c96684",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52ef7c19-e06e-4a21-bbcf-d18d789bf420",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "b17ccd07-05b6-40bc-9399-c72cf4f3bc3e",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "f939170b-336c-4519-b577-f67405cf6be2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "0c4abc28-c8a8-4393-ab3f-9d16e8fd4fc8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "3e41798d-a2dc-487a-a39a-2124a73640e2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84b52aa3-1e60-4def-96ac-7d2738608af2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59b64dd8-9360-4fff-af05-29bce5ff7b13",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bacc560-8655-4d56-91a0-67077fd2383f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}